# src/controllers/likeController.js
@@ -6,7 +6,7 @@ const errorMessages = require('../constants/errorMessages');
 const errorCodes = require('../constants/errorCodes');
 
 /**
- * Handler for POST /users/{userId}/articles/{articleId}/like
+ * Handler for POST /users/{userId}/like
  *
  * @param {Request} req - The Express request object.
  * @param {Response} res - The Express response object.
@@ -32,4 +32,23 @@ const create = async (req, res) => {
   responseHelper.ok(req, res, response);
 };
 
-module.exports = { create };
+/**
+ * Handler for DELETE /users/{userId}/like/{likeId}
+ *
+ * @param {Request} req - The Express request object.
+ * @param {Response} res - The Express response object.
+ */
+const deleteById = async (req, res) => {
+  const { userId, likeId } = req.params;
+
+  const user = await userService.findById(userId, { raw: true });
+  if (!user) {
+    responseHelper.notFound(req, res, errorMessages.USER_NOT_FOUND, errorCodes.USER_NOT_FOUND);
+    return;
+  }
+
+  await likeService.deleteById(likeId);
+  responseHelper.ok(req, res);
+};
+
+module.exports = { create, deleteById };
